<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable name="memo" type="com.rulyox.mvvm.memo.Memo" />
        <variable name="handlers" type="com.rulyox.mvvm.handler.AddHandlers" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/dialog_new_memo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/dialogTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_title"
            android:inputType="text"
            android:importantForAutofill="no"
            android:text="@={memo.title}" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/dialogText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_text"
            android:inputType="text"
            android:importantForAutofill="no"
            android:text="@={memo.text}" />

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_marginBottom="5dp" >

            <Button
                android:layout_width="wrap_content"
                android:minWidth="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/colorAccent"
                android:text="@string/dialog_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="@{handlers::clickCancelButton}" />

            <Button
                android:layout_width="wrap_content"
                android:minWidth="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/colorAccent"
                android:text="@string/dialog_add"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="@{handlers::clickAddButton}" />

        </LinearLayout>

    </LinearLayout>

</layout>
